--- a/style/home.css
+++ b/style/home.css
@@ -7,22 +7,32 @@ body {
   width: 100vw;
   background-color: rgb(4, 4, 4);
 }
+body,
+html {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
   display: flex;
   justify-content: center;
   align-items: flex-end;
+
   background-size: 100%;
 }
 
 .cloud {
   position: absolute;
-  height: 900px;
-  width: 4010px;
+  height: 99vh;
+  width: 99vw;
   animation: nuvem 80s linear infinite;
 }
 
 .img_cloud {
-  height: 120%;
+  height: 99vw;
 }
 
 .cabecaVenon {
@@ -69,9 +79,9 @@ body {
 }
 
 .informacoes {
-  margin-top: 150px;
+  padding-top: 120px;
   font-family: "Marvel", sans-serif;
-  font-weight: 400;
+  font-weight: 800;
   font-style: normal;
   text-align: center;
   font-size: 1.3rem;
@@ -79,12 +89,13 @@ body {
 }
 
 #trailer {
-  display: block;
-  width: 50%;
-  height: 0;
-  padding-bottom: 30%;
-  position: relative;
-  margin: auto;
+  position: absolute;
+  align-self: center;
+  top: 0;
+  left: 0;
+  width: 70%;
+  height: 70%;
+  z-index: 2;
 }
 
 .center {
@@ -96,10 +107,10 @@ body {
 
 #trailer iframe {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 65%;
+  left: 44%;
+  width: 53%;
+  height: 53%;
 }
 
 .glow-on-hover {
@@ -116,21 +127,23 @@ body {
   font-family: "Marvel", sans-serif;
   font-size: 1.3rem;
   color: rgb(169, 3, 3);
+  position: relative;
+  z-index: 1;
 }
 
 .glow-on-hover:before {
   content: "";
   background: linear-gradient(
     45deg,
-    #ff00008e,
-    #ff73008a,
-    #000000,
+    #ff0000,
+    #ff7300,
+    #ff0000,
     #f9faf9fd,
-    #00ffd589,
-    #002aff78,
-    #35026b7d,
-    #5d0149a0,
-    #84030380
+    #ff2929,
+    #ff0000,
+    #ff4800,
+    #ff0000,
+    #840303
   );
   position: absolute;
   top: -2px;
@@ -184,10 +197,10 @@ body {
 
 @keyframes nuvem {
   0% {
-    right: 0;
+    left: 0;
   }
   100% {
-    right: 100%;
+    left: 100%;
   }
 }
 @keyframes hoverLogo {
