--- a/style/home.css
+++ b/style/home.css
@@ -1,27 +1,17 @@
 body {
-  overflow-x: hidden;
-  overflow-y: hidden;
+  /* overflow-x: hidden;
+  overflow-y: hidden; */
   padding: 0%;
   margin: 0;
   height: 100vh;
   width: 100vw;
   background-color: rgb(4, 4, 4);
 }
-body,
-html {
-  height: 100%;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 .container {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-
-  background-size: 100%;
 }
 
 .cloud {
@@ -119,7 +109,7 @@ html {
   border: none;
   outline: none;
   color: #fff;
-  background: #111;
+  background: #11111160;
   cursor: pointer;
   position: relative;
   z-index: 0;
