--- a/style/home.css
+++ b/style/home.css
@@ -1,6 +1,6 @@
 body {
-  /* overflow-x: hidden;
-  overflow-y: hidden; */
+  overflow-x: hidden;
+  overflow-y: hidden;
   padding: 0%;
   margin: 0;
   height: 100vh;
